--- a/backend/services/requirements.txt
+++ b/backend/services/requirements.txt
@@ -11,3 +11,5 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 pydantic==2.5.0
+# Pin spaCy model compatible with spaCy 3.7.x
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
